WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123121
Navigation policy callback not called when performing the same fragment navigation twice
https://bugs.webkit.org/show_bug.cgi?id=123121
Summary
Navigation policy callback not called when performing the same fragment navig...
Anders Carlsson
Reported
2013-10-21 15:21:27 PDT
Navigation policy callback not called when performing the same fragment navigation twice
Attachments
Patch
(14.76 KB, patch)
2013-10-21 15:34 PDT
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-10-21 15:34:36 PDT
Created
attachment 214785
[details]
Patch
Anders Carlsson
Comment 2
2013-10-21 15:53:39 PDT
Committed
r157756
: <
http://trac.webkit.org/changeset/157756
>
Daniel Bates
Comment 3
2013-10-21 16:00:45 PDT
<
rdar://problem/15230466
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug