Navigation policy callback not called when performing the same fragment navigation twice https://bugs.webkit.org/show_bug.cgi?id=123121 <rdar://problem/15230466>

Reviewed by Beth Dakin.

Source/WebCore:

There's code in PolicyChecker::checkNavigationPolicy that will call the decision function right away
if the requests are equal, without consulting any policy client. Because of this, make sure to empty out
the last checked request of the document loader when doing a fragment navigation.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadURL):
(WebCore::FrameLoader::loadWithDocumentLoader):

Tools:

Add a test.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/FragmentNavigation.html: Added.
* TestWebKitAPI/Tests/mac/FragmentNavigation.mm: Added.
(+[WebKit1FragmentNavigationTestDelegate shared]):
(-[WebKit1FragmentNavigationTestDelegate webView:runJavaScriptAlertPanelWithMessage:initiatedByFrame:]):
(-[WebKit1FragmentNavigationTestDelegate webView:decidePolicyForNavigationAction:request:frame:decisionListener:]):
(-[WebKit1FragmentNavigationTestDelegate webView:didFinishLoadForFrame:]):
(-[WebKit1FragmentNavigationTestDelegate _runNextTestWithWebView:]):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/141209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157756 268f45cc-cd09-0410-ab3c-d52691b4dbfc